# cudaLearn

./: .gitignore  CMakeLists.txt  copy.cu  cublas_gemma.cu  filter.cu  gelu.cu  gemm.cu  parallel_reduce.cu  queryProps.cu  readme.md  xmake.lua
.xmake/windows/x64/: xmake.conf
.xmake/windows/x64/cache/: config  detect  history  package  references  toolchain
3rd/: CMakeLists.txt  update.bat  xmake.lua
3rd/cutlass/: readme
